Fixed Menu Section using CSS Grid;better wrapping

--- a/index.css
+++ b/index.css
@@ -215,11 +215,11 @@ ul {
     width: 100%;
 }
 .menu-category {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    width: 100%;
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    grid-gap: 1rem;
 }
 .product-listing {
     display: flex;
